--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,23 @@
   border: 1px solid rgba(0, 243, 255, 0.2);
   margin: 1rem 0;
 }
+
+@keyframes scan {
+  0% {
+    top: 0%;
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 1;
+  }
+
+  100% {
+    top: 100%;
+    opacity: 0;
+  }
+}
